--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build .  --tag therealr5/trucksimulatorbot
+      run: docker build .  --tag therealr5/starboard
       
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -38,4 +38,4 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push the image
-      run: docker push therealr5/trucksimulatorbot
+      run: docker push therealr5/starboard
